[package]
name = "joda_rs"
version = "0.1.1"
edition = "2024"
authors = ["Jeff Stano <jeff@stano.com>"]
description = "A joda like wrapper around the time crate"
license = "Apache-2.0"
repository = "https://github.com/jstano/joda-rs"
readme = "README.md"
keywords = ["joda"]

[dependencies]
rstest = "^0.26.1"
rust_decimal = "^1.38.0"
num-traits = "^0.2.19"
time = { version = "^0.3.43", features = ["parsing", "local-offset"] }
time-tz = {  version = "^2.0.0", features = ["db", "system"] }

[lib]
doctest = false
