[package]
name = "joda_rs"
version = "0.1.2"
edition = "2024"
authors = ["Jeff Stano <jeff@stano.com>"]
description = "A java time / joda like wrapper around the time crate"
license = "Apache-2.0"
repository = "https://github.com/jstano/joda-rs"
readme = "README.md"
keywords = ["joda", "java.time", "java time"]

[dependencies]
rust_decimal = "^1.38.0"
time = { version = "^0.3.43", features = ["parsing", "local-offset"] }
time-tz = {  version = "^2.0.0", features = ["db", "system"] }

[lib]
doctest = false
